tests/conformance/errors/import_module_stack/helpers.dgm
fn boom() {
  throw "module err"
}

boom()
